k8s/products-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api
spec:
  selector:
    app: products-api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
