k8s/products-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-front
spec:
  selector:
    app: products-front
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
